# situations-model

./: CMakeLists.txt  README.md  situations-model.pro
lib/: CMakeLists.txt  lib.pro
lib/SituationsModel/: CMakeLists.txt  SituationsModel.pro  model.pro  qmldir
lib/SituationsModel/include/SituationsModel/: action.h  actiongroup.h  actiongrouplist.h  actionproperties.h  application.h  condition.h  conditiongroup.h  conditiongrouplist.h  conditionproperties.h  contactlist.h  feature.h  featurelist.h  logging.h  model_global.h  packagelist.h  platform.h  plugin.h  root.h  settings.h  situation.h  situationlist.h  versionlimits.h
lib/SituationsModel/platform/android/: android.pri
lib/SituationsModel/platform/linux/: linux.pri
lib/SituationsModel/platform/sailfish/: qmldir  sailfish.pri
lib/SituationsModel/platform/windows/: windows.pri
lib/SituationsModel/src/: action.cpp  actiongroup.cpp  actiongrouplist.cpp  actionproperties.cpp  application.cpp  condition.cpp  conditiongroup.cpp  conditiongrouplist.cpp  conditionproperties.cpp  contactlist.cpp  feature.cpp  featurelist.cpp  logging.cpp  packagelist.cpp  platform.cpp  plugin.cpp  root.cpp  settings.cpp  situation.cpp  situationlist.cpp  versionlimits.cpp
lib/android/: android.pri
lib/include/model/: action.h  actiongroup.h  actiongrouplist.h  actionproperties.h  application.h  condition.h  conditiongroup.h  conditiongrouplist.h  conditionproperties.h  contactlist.h  feature.h  featurelist.h  packagelist.h  platform.h  plugin.h  settings.h  situation.h  situationlist.h  versionlimits.h
lib/include/situations-model/: action.h  actiongroup.h  actiongrouplist.h  actionproperties.h  application.h  condition.h  conditiongroup.h  conditiongrouplist.h  conditionproperties.h  contactlist.h  feature.h  featurelist.h  logging.h  packagelist.h  platform.h  plugin.h  settings.h  situation.h  situationlist.h  versionlimits.h
lib/linux/: linux.pri
lib/platform/: CMakeLists.txt
lib/platform/android/: android.pri  util.cpp
lib/platform/linux/: CMakeLists.txt  linux.pri  util.cpp
lib/platform/sailfish/: sailfish.pri
lib/platform/win/: util.cpp  win.pri
lib/sailfish/: sailfish.pri  util.cpp
lib/src/: action.cpp  actiongroup.cpp  actiongrouplist.cpp  actionproperties.cpp  application.cpp  condition.cpp  conditiongroup.cpp  conditiongrouplist.cpp  conditionproperties.cpp  contactlist.cpp  feature.cpp  featurelist.cpp  logging.cpp  logging.h  model_logging.cpp  model_logging.h  packagelist.cpp  platform.cpp  plugin.cpp  settings.cpp  situation.cpp  situationlist.cpp  util.h  versionlimits.cpp
lib/src/android/: util.cpp
lib/src/windows/: util.cpp
lib/win/: win.pri
plugin/: plugin.cpp  plugin.pro  qmldir
plugin/platform/: platform.pri
plugin/platform/android/: android.pri
plugin/platform/linux/: linux.pri
plugin/platform/sailfish/: sailfish.pri
plugin/platform/windows/: windows.pri
plugin/sailfish/: sailfish.pri
plugin/src/: plugin.cpp
plugin/win/: win.pri
